--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "niko",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://GersonEC.github.io/niko",
   "dependencies": {
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.4.0",
@@ -28,6 +29,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,6 +51,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "gh-pages": "^3.2.3"
   }
 }
