--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-redux": "^7.1.7",
     "antd": "^4.16.5",
     "axios": "^0.21.1",
+    "cypress": "^7.7.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
