--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@types/react-redux": "^7.1.7",
     "antd": "^4.16.5",
     "axios": "^0.21.1",
-    "cypress": "^7.7.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -52,7 +51,10 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.6",
     "@types/react-router-dom": "^5.1.7",
+    "cypress": "^7.7.0",
+    "eslint-plugin-cypress": "^2.11.3",
     "gh-pages": "^3.2.3"
   }
 }
